IW-73 mobile header version

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,8 @@
-@use './Setting.scss';
 @use './components/Footer.scss';
 @use './components/Header.scss';
 @use './pages/Home.scss'; 
 
+body {
+    padding: 0;
+    margin: 0; 
+  }
