IW-79 footer mobile version

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -3,16 +3,17 @@
     justify-content: space-between;
     padding: 1.5rem;
     & .logo{
-        width: 145px;
-        height: 46.881px;
+        max-width: 9rem;
+        max-height: 2.93rem;
         flex-shrink: 0;
     }
     & nav{
         display: flex;
         align-items: center;
         justify-content: flex-end;
-        gap: 26px;
-flex: 1 0 0;
+        gap: 1.625rem;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 500;
         & a{
             text-decoration: none;
             color: #FF6060;
