--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -6,10 +6,11 @@
     flex-shrink: 0;
     background: #000;
     & #logoFooter{
-        padding: 4rem 7.5rem 3.625rem 7.5rem;
+        padding-top: 4rem;
     }
     & p{
         color: white;
-        max-width: 133px;
+        margin-bottom: 3.62rem;
+        max-width: 6.64rem;
     }
 }
