--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,12 +2,12 @@
     display: flex;
     justify-content: space-between;
     padding: 1.5rem;
-    & .logo{
+    .logo{
         max-width: 9rem;
         max-height: 2.93rem;
         flex-shrink: 0;
     }
-    & nav{
+    nav{
         display: flex;
         align-items: center;
         justify-content: flex-end;
@@ -17,6 +17,9 @@
         & a{
             text-decoration: none;
             color: #FF6060;
+        }
+        & a:hover {
+          text-decoration: underline;
         }
         
     }
