--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -5,6 +5,7 @@
     align-items: center;
     flex-shrink: 0;
     background: #000;
+    margin-top: 1rem;
     & #logoFooter{
         padding-top: 4rem;
     }
