--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -7,7 +7,7 @@
     justify-content: flex-end;
     border-radius: 0.625rem;
     background-color: #FF6060; 
-    max-width: 20rem;
+    width: 20rem;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
