--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -7,6 +7,11 @@ $color-background: #f6f6f6;
 $color-star-full: #e3e3e3;
 $color-footer: black;
 
+$breakpoint-mobile: 480px;
+$breakpoint-tablet: 768px;
+$breakpoint-desktop: 1024px;
+
+
 //Dimension
 $body-max-width: 1440px;
 $desktop-screen-width: 80%;
