--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,13 +1,13 @@
 .card {
-    margin: 0 1rem 1.34rem;
-    height: 16rem;
+    margin: 0 0 1.34rem;
+    min-height: 16rem;
     display: flex;
     flex-direction: column;
     padding: 1rem;
     justify-content: flex-end;
     border-radius: 0.625rem;
     background-color: #FF6060; 
-    width: 20rem;
+    min-width: 19rem;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -17,8 +17,12 @@
         color: white;
         font-size: 1.125rem;
         font-weight: 400;
-        max-width: 10rem;
+        
         line-height: 1.6rem;
-        margin: 0rem;        
+        margin: 0rem;   
+        
+        @media (max-width: 768px) {
+            max-width: 10rem;
+        }
     }
 }
