--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -1,36 +1,47 @@
-@use "./variable" as *;
-@use "./mixin" as *;
-
 .banner {
-    
-    h1 {
-        background-image: url(../assets/IMG.png);
-        background-position: center;
-        background-size: cover;
-        background-color: #0000004d;
-        background-blend-mode: darken;
-        font-size: 48px;       
-        border-radius: 0.625rem;
-        color: #FFF;
-        font-family: Montserrat;
-        font-size: 1.5rem;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 100%; 
+    margin: 0 0 1rem 0;
+    .image-container {
         height: 7rem;
-        display: flex;
-        align-items: center;
-        padding: 0 6rem 0 1rem;
-        @media (min-width: 768px) {
-            height: 13.9375rem;
-            border-radius: 1.5625rem;
-            text-align: center;
-            font-size: 2rem;
-            display: flex;
-            align-items: center;
-            padding: 0 7rem;
-            justify-content: center;
-            font-weight: 400;
+        width: 100%;
+        position: relative;
+        @media (min-width: 1440px) {
+            height: 13rem;
+            
         }
+
+        img {
+            height: 100%;
+            width: 100%;
+            border-radius: 0.625rem;
+            object-fit: cover;
+        }
+        p{
+            position: absolute;
+            top: 30%;
+            left: 5%;
+            color: white;
+            font-weight: 500;
+            font-size: 1.5rem;
+            z-index: 2;
+            margin: 0;
+            @media (min-width: 1440px){
+                font-size: 3rem;
+                font-weight: 400;
+                top: 40%;
+                left: 24%;
+            }
+        }
+    }
+
+    .image-container::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3); /* Noir avec 50% d'opacité */
+        z-index: 1;
+        border-radius: 0.625rem;
     }
 }
