--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -9,6 +9,10 @@
         max-width: 9rem;
         max-height: 2.93rem;
         flex-shrink: 0;
+        @media (min-width: 1440px) {
+            width: 14rem;
+            height: 4.25rem;
+        }
     }
     nav{
         display: flex;
@@ -17,13 +21,23 @@
         gap: 1.625rem;
         font-family: 'Montserrat', sans-serif;
         font-weight: 500;
+        @media (min-width: 1440px) {
+            gap: 3.6rem;
+        }
         & a{
             text-decoration: none;
             color: #FF6060;
+            text-transform: uppercase;
+            @media (min-width: 1440px) {
+                font-size: 1.5rem;
+                text-transform: none;
+            }
         }
-        & a:hover {
-          text-decoration: underline;
-        }
+        & .active {
+            text-decoration: underline;
+          }
+          
         
     }
 }
+
