--- a/src/styles/_logementDescription.scss
+++ b/src/styles/_logementDescription.scss
@@ -113,3 +113,10 @@
     font-weight: 900;
     padding-right: 0.5rem;
 }
+
+.list{
+    @media (min-width: 1440px) {
+        font-size: 1.125rem;
+        
+    }
+}
